[gd_scene load_steps=2 format=3 uid="uid://2qr2cpxlrumy"]

[ext_resource type="Script" path="res://scenes/multiplayer_menu.gd" id="1_rcsq5"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rcsq5")

[node name="Host" type="Button" parent="."]
layout_mode = 0
offset_left = 69.0
offset_top = 59.0
offset_right = 147.0
offset_bottom = 98.0
text = "Host
"

[node name="Join" type="Button" parent="."]
layout_mode = 0
offset_left = 196.0
offset_top = 60.0
offset_right = 274.0
offset_bottom = 99.0
text = "Join
"

[node name="Start" type="Button" parent="."]
layout_mode = 0
offset_left = 331.0
offset_top = 64.0
offset_right = 409.0
offset_bottom = 103.0
text = "Start Game
"

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_top = -1.0
offset_right = 459.0
offset_bottom = 30.0

[connection signal="pressed" from="Host" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="Join" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="Start" to="." method="_on_start_button_pressed"]
